dark add and page animation add

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
-html {
-  transition: background-color 0.3s, color 0.3s;
+@layer base {
+  html {
+    --color-base-100: #ffffff !important; /* অথবা তোমার পছন্দ মতো কালার */
+  }
 }
